--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,31 @@
 {
-  "name": "aklebe-laravel/data-table-module",
-  "type": "laravel-module",
-  "description": "",
-  "authors": [
-    {
-      "name": "Andreas Klebe",
-      "email": "a.klebe.work@gmail.com"
-    }
-  ],
-  "extra": {
-    "laravel": {
-      "providers": [],
-      "aliases": {
-      }
+    "name": "aklebe-laravel/data-table-module",
+    "type": "laravel-module",
+    "description": "Provides frontend data tables for custom objects or eloquent models and their relations.",
+    "authors": [
+        {
+            "name": "Andreas Klebe",
+            "email": "a.klebe.work@gmail.com"
+        }
+    ],
+    "extra": {
+        "laravel": {
+            "providers": [],
+            "aliases": {
+            }
+        },
+        "module-dir": "DataTable"
     },
-    "module-dir": "DataTable"
-  },
-  "autoload": {
-    "psr-4": {
-      "Modules\\DataTable\\": "",
-      "Modules\\DataTable\\database\\factories\\": "database/factories/",
-      "Modules\\DataTable\\database\\seeders\\": "database/seeders/"
+    "autoload": {
+        "psr-4": {
+            "Modules\\DataTable\\": "",
+            "Modules\\DataTable\\database\\factories\\": "database/factories/",
+            "Modules\\DataTable\\database\\seeders\\": "database/seeders/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Modules\\DataTable\\tests\\": "tests/"
+        }
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Modules\\DataTable\\tests\\": "tests/"
-    }
-  }
 }
